Closed Bug 244062 Opened 22 years ago Closed 22 years ago

Solaris build failure - "response" in HandleRemoteArgument() needs cast

Categories

(Core Graveyard :: X-remote, defect)

Other Branch
Sun
Solaris
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mozbugs, Assigned: blizzard)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7) Gecko/20040518 Firefox/0.8.0+ Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7) Gecko/20040518 Firefox/0.8.0+ Aviary builds fail on Solaris / Sun Studio: (in toolkit/xre) "nsAppRunner.cpp", line 1133: Error: Different types for "?:" (nsXPIDLCString and const char*). 1 Error(s) detected. gmake: *** [nsAppRunner.o] Error 1 Casting response to (const char *) allows it to compile... Reproducible: Always Steps to Reproduce: 1. 2. 3.
OS: other → Solaris
Hardware: Other → Sun
Version: Trunk → Other Branch
Status: UNCONFIRMED → NEW
Ever confirmed: true
Added a couple of suspects to CC :)
Make a patch, and I'll review it.
First time I've submitted a patch, so apologies in advance if I haven't done it correctly...
Attachment #149057 - Flags: review?(bsmedberg)
Comment on attachment 149057 [details] [diff] [review] Proposed patch for Aviary branch (2004-05-21) Thanks for the patch! This is a good attempt for the patch, but I think we don't need a cast. I've committed a version that uses response.get() instead.
Attachment #149057 - Flags: review?(bsmedberg)
OK, that works too (just confirmed) - thanks! :)
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Summary: Solars build failure - "response" in HandleRemoteArgument() needs cast → Solaris build failure - "response" in HandleRemoteArgument() needs cast
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: