Use nsXPIDLCString.get() to fix Solaris build bustage. Bug 244062, thanks to Iain MacDonnell <dseven@dseven.org> for the report and a fix.